2002-09-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* trans/Makefile :
	* trans/transdef.c :
	* trans/transdef.h :
	* trans/transdeflist.c :
	* trans/transdeflist.h :
	* trans/transreflist.c :
	* trans/transreflist.h :

	  - Renamed transdeflist with transtab. Also defined the list
	    internally.

	  - Renamed transreflist with translist.

	* ident/Makefile :
	* ident/identlist.c :
	* ident/identlist.h :
	* ident/symtab.c :
	* ident/symtab.h :

	  - Separated the symbol table from identlist. Now the small
	    differences between the two are separated for good. See symtab.h
	    for a list of differences.

2002-09-06  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* simplelist.c :
	* simplelist.h :

	  - The function simplelist_del_data now deletes ALL instances
	    of the given data from the list. Before this change, only the
	    first instance (from the top) is deleted.

	  - The function simplelist_get_data now gives another list containing
	    pointers to all the nodes from the first list that matches the
	    given data. API CHANGE.

	* stringlist.c :
	* stringlist.h :

	  - Took out unused compare function.

2002-09-05  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/expression.c :
	* exp/expression.h :
	* ident/identlist.c :
	* ident/identlist.h :
	* trans/transdef.c :
	* trans/transdef.h :
	* trans/transref.c :
	* trans/transref.h :

	  - Took out unused cmp functions.

	* parser/parser.y :

	  - Cleanup.

2002-09-02  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* trans/Makefile :
	* trans/transdef.h :
	* trans/transref.c :
	* trans/transdef.c :
	* trans/transref.h :
	* trans/transdeflist.c :
	* trans/transdeflist.h :
	* trans/transreflist.c :
	* trans/transreflist.h :

	  - Removed trans.* translist.* and changed it to transref/list and
	    transdef/list. transdef/list holds transformation definitions
	    (name, varlist, precond and postcond). transref/list is a temp
	    storage structure for policy statements to pass transformation