@@ -1,23 +1,0 @@
-# Vino Crescini <jcrescin@cit.uws.edu.au>
-
-TOPSRCDIR = ..
-CFLAGS = -ansi -Wall -Wstrict-prototypes -I$(TOPSRCDIR)/include -L$(TOPSRCDIR)/lib
-LDFLAGS = -L$(TOPSRCDIR)/lib
-TARGETS = datastruct_test
-
-ifdef DEBUG
-CFLAGS += -g -DDEBUG
-else
-CFLAGS += -O2
-endif
-
-all : $(TARGETS)
-
-datastruct_test : datastruct_test.o
-	$(CC) $(LDFLAGS) -o $(@) datastruct_test.o -ldatastruct
-
-datastruct_test.o : datastruct_test.c
-	$(CC) $(CFLAGS) -o $(@) -c datastruct_test.c
-
-clean :
-	$(RM) $(TARGETS) *.o
